--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\takas\\Anaconda3\\envs\\MachineLearning\\python.exe"
+    "python.pythonPath": "/Users/taka-tomo/opt/anaconda3/envs/ml/bin/python"
 }
