--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/taka-tomo/opt/anaconda3/envs/ml/bin/python"
+    "python.pythonPath": "c:\\Users\\takasaki\\Anaconda3\\envs\\ml\\python.exe"
 }
