--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,20 @@ jedi==0.17.0
 joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.4.2
+mpmath==1.2.1
 numpy==1.20.3
 pandas==1.2.4
+parso==0.8.2
 Pillow==8.2.0
 pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2021.1
 pywin32==227
 pyzmq==20.0.0
 scikit-learn==0.24.2
 scipy==1.6.3
+six==1.16.0
 sklearn==0.0
+sympy==1.8
 threadpoolctl==2.1.0
 wincertstore==0.2
